--- a/scss/blocks/_common.scss
+++ b/scss/blocks/_common.scss
@@ -1,7 +1,7 @@
 /* CUSTOM PROPS */
 :root {
-  --primary-bg-color: #fff;
-  --text-color: #000;
+  --bg-color: #fff;
+  --text-color: #333;
 }
 
 /* GLOBAL */
@@ -37,11 +37,12 @@ img {
 
 body {
   height: 100%;
-  font-family: "Arial", sans-serif;
+  font-family: "Roboto", "Arial", sans-serif;
   font-size: 16px;
+  font-weight: 400;
   line-height: 1.5;
   color: var(--text-color);
-  background-color: var(--primary-bg-color);
+  background-color: var(--bg-color);
   display: flex;
   flex-direction: column;
 }
