--- a/scss/blocks/_common.scss
+++ b/scss/blocks/_common.scss
@@ -2,6 +2,8 @@
 :root {
   --bg-color: #fff;
   --text-color: #333;
+  --secondary-text-color: #000;
+  --accent-color-green: #0a775f;
 }
 
 /* GLOBAL */
