--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,6 +3,6 @@
 
 // BLOCKS
 @import "./blocks/common";
-@import "./blocks/header";
+@import "./blocks/header-hero";
 @import "./blocks/hero";
 @import "./blocks/footer";
