--- a/scss/blocks/_header-hero.scss
+++ b/scss/blocks/_header-hero.scss
@@ -1,6 +1,6 @@
 /* SITE HEADER HERO WRAPPER */
 .site-header-hero__wrapper {
-  background: url("../../images/light-img-bg.png") no-repeat center / cover;
+  background: #f3d7b7, url("../../images/light-img-bg.png") no-repeat center / cover;
 }
 
 /* SITE HEADER */
