add button hover and focus pseudo classes

--- a/css/main.css
+++ b/css/main.css
@@ -135,6 +135,13 @@ body {
   border-radius: 100px;
   color: #fff;
   font-weight: 500;
+  transition: opacity 0.4s ease;
+}
+.button:hover {
+  opacity: 0.8;
+}
+.button:active {
+  opacity: 0.6;
 }
 
 .button--green {
