--- a/scss/blocks/_header-hero.scss
+++ b/scss/blocks/_header-hero.scss
@@ -45,6 +45,7 @@
 
 .sitenav__link {
   text-transform: uppercase;
+  white-space: nowrap;
   font-size: 12px;
   font-weight: 700;
   color: var(--text-color);
@@ -66,7 +67,8 @@
 }
 
 .hero__content {
-  max-width: 464px;
+  max-width: 730px;
+  padding: 116px 116px 0 130px;
 }
 
 .hero__heading {
@@ -78,5 +80,18 @@
 }
 
 .hero__description {
-  margin-bottom: 34px;
+  &:not(:last-child) {
+    margin-bottom: 34px;
+  }
+}
+
+.hero__img {
+  max-width: 710px;
+  width: 100%;
+  height: 596px;
+  object-fit: cover;
+}
+
+.hero__img--index {
+  height: 696px;
 }
